improved lint warning

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">TodoApp</string>
+    <string name="add_new_task">ADD NEW TASK</string>
+    <string name="title">Title</string>
+    <string name="message">Message</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="save">Save</string>
+    <string name="priority">Priority</string>
 </resources>
